--- a/Mental Health/index.html
+++ b/Mental Health/index.html
@@ -1,12 +1,118 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-  <script language="javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-
+<meta charset='utf-8' />
+<title>Create and style clusters</title>
+<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
+<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+<style>
+body { margin:0; padding:0; }
+#map { position:absolute; top:0; bottom:0; width:100%; }
+</style>
 </head>
-
 <body>
+ 
+ 
+<div id='map'></div>
+ 
+<script>
+mapboxgl.accessToken = 'pk.eyJ1Ijoid2NjaHVhbmciLCJhIjoiY2syaWRwMmJtMWZubTNjcThldmlrY295YSJ9.PtAFnFgpzZREOYBWHMyaOw';
+var map = new mapboxgl.Map({
+container: 'map',
+style: 'mapbox://styles/mapbox/dark-v10',
+center: [-103.59179687498357, 40.66995747013945],
+zoom: 3
+});
+ 
+map.on('load', function() {
+// Add a new source from our GeoJSON data and set the
+// 'cluster' option to true. GL-JS will add the point_count property to your source data.
+map.addSource("emotions", {
+type: "geojson",
+
+data: "emotions.geojson",
+cluster: true,
+clusterMaxZoom: 14, // Max zoom to cluster points on
+clusterRadius: 50 // Radius of each cluster when clustering points (defaults to 50)
+});
+ 
+map.addLayer({
+id: "clusters",
+type: "circle",
+source: "emotions",
+filter: ["has", "point_count"],
+paint: {
+
+"circle-color": [
+"step",
+["get", "point_count"],
+"#51bbd6",
+100,
+"#f1f075",
+750,
+"#f28cb1"
+],
+"circle-radius": [
+"step",
+["get", "point_count"],
+20,
+100,
+30,
+750,
+40
+]
+}
+});
+ 
+map.addLayer({
+id: "cluster-count",
+type: "symbol",
+source: "emotions",
+filter: ["has", "point_count"],
+layout: {
+"text-field": "{point_count_abbreviated}",
+"text-font": ["DIN Offc Pro Medium", "Arial Unicode MS Bold"],
+"text-size": 12
+}
+});
+ 
+map.addLayer({
+id: "unclustered-point",
+type: "circle",
+source: "emotions",
+filter: ["!", ["has", "point_count"]],
+paint: {
+"circle-color": "#11b4da",
+"circle-radius": 4,
+"circle-stroke-width": 1,
+"circle-stroke-color": "#fff"
+}
+});
+ 
+// inspect a cluster on click
+map.on('click', 'clusters', function (e) {
+var features = map.queryRenderedFeatures(e.point, { layers: ['clusters'] });
+var clusterId = features[0].properties.cluster_id;
+map.getSource('emotions').getClusterExpansionZoom(clusterId, function (err, zoom) {
+if (err)
+return;
+ 
+map.easeTo({
+center: features[0].geometry.coordinates,
+zoom: zoom
+});
+});
+});
+ 
+map.on('mouseenter', 'clusters', function () {
+map.getCanvas().style.cursor = 'pointer';
+});
+map.on('mouseleave', 'clusters', function () {
+map.getCanvas().style.cursor = '';
+});
+});
+</script>
+ 
 </body>
 </html>
